--- a/src/app/payment-form/payment-form.component.css
+++ b/src/app/payment-form/payment-form.component.css
@@ -1,91 +1,192 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-
-p:not(:last-child) {
-  margin: 0 0 20px;
+/**
+ * Tabs
+ */
+ .tabs {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-main {
-  max-width: 800px;
-  padding: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+.tabs label {
+  order: 1;
+  display: block;
+  padding: 1rem 2rem;
+  margin-right: 0.2rem;
+  cursor: pointer;
+  background: #b9b9b9;
+  font-weight: bold;
+  transition: background ease 0.2s;
 }
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 60%;
 
-section {
-  display: none;
-  padding: 20px 0 0;
-  border-top: 1px solid #abc;
-}
-
-input {
-  display: none;
-}
-
-label {
-  display: inline-block;
-  margin: 0 0 -1px;
-  padding: 15px 25px;
-  font-weight: 600;
   text-align: center;
-  color: #abc;
-  border: 1px solid transparent;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-
-label:before {
-  font-family: fontawesome;
-  font-weight: normal;
-  margin-right: 10px;
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #b9b9b9;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
-
-label[for*='1']:before {
-  content: '\f1cb';
+.form select {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 16px;
+  }
+.form label{
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    display: block;
+    background-color: white;
+    color:black;
 }
-
-label[for*='2']:before {
-  content: '\f17d';
-}
-
-label[for*='3']:before {
-  content: '\f16c';
-}
-
-label[for*='4']:before {
-  content: '\f171';
-}
-
-label:hover {
-  color: #789;
+.banner {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: rgba(31, 58, 147, 1);
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 25px;
+    text-align: center;
+  }
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: rgba(31, 58, 147, 1);
+  width: 50%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  margin-bottom: 3%;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
   cursor: pointer;
 }
 
-input:checked + label {
-  color: #0af;
-  border: 1px solid #abc;
-  border-top: 2px solid #0af;
-  border-bottom: 1px solid #fff;
+.form button:hover,.form button:active,.form button:focus {
+  background: #43A047;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.form .register-form {
+  display: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+ text-align:center;
+  margin: 0 auto;
+}
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container .info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+.container .info span a {
+  color: #000000;
+  text-decoration: none;
+}
+.container .info span .fa {
+  color: #EF3B3A;
+}
+.tabs .tab {
+  order: 99;
+  flex-grow: 1;
+  width: 100%;
+  display: none;
+  padding: 1rem;
+  background: #fff;
 }
 
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
+.tabs input[type="radio"] {
+  display: none;
+}
+
+.tabs input[type="radio"]:checked + label {
+  background: #fff;
+}
+
+.tabs input[type="radio"]:checked + label + .tab {
   display: block;
 }
 
-@media screen and (max-width: 800px) {
-  label {
-    font-size: 0;
+@media (max-width: 45em) {
+  .tabs .tab,
+  .tabs label {
+    order: initial;
   }
 
-  label:before {
-    margin: 0;
-    font-size: 18px;
+  .tabs label {
+    width: 100%;
+    margin-right: 0;
+    margin-top: 0.2rem;
   }
 }
-@media screen and (max-width: 500px) {
-  label {
-    padding: 15px;
-  }
+/**
+ * Generic Styling
+*/
+body {
+  background: gray;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding-top: 10vh;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+  line-height: 1.5;
+  max-width: 60rem;
+  margin: 0 auto;
+  font-size: 112%;
+}
+
+.input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
