--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -1,15 +1,22 @@
 <nav class="menu" tabindex="0" style=" height:100%; min-height:600px; overflow:hidden">
-    <div class="smartphone-menu-trigger"></div>
-    <header class="avatar">
-      
-      <h2>Dashboard</h2>
-    </header>
-    <ul>
-      <li tabindex="0" class="icon-verify-customer"> <a class="nav-link" routerLink="/admin/verifyaccount" routerLinkActive="active">Verify Account</a></li>
-      <li tabindex="1" class="icon-verify-image"> <a class="nav-link" routerLink="/admin/verifyimage" routerLinkActive="active">Verify Image</a></li>
-<li tabindex="2" class="icon-users"> <a class="nav-link" routerLink="/admin/currentartists" routerLinkActive="active">View Current Artists</a></li>
-<li tabindex="3" class="icon-addcategory"> <a class="nav-link" routerLink="/admin/addcategory" routerLinkActive="active">Add New Category</a></li>
-<li tabindex="4" class="icon-addsubcategory"> <a class="nav-link" routerLink="/admin/addsubcategory" routerLinkActive="active">Add New Subcategory</a></li>
-    </ul>
-  </nav>
-
+  <div class="smartphone-menu-trigger"></div>
+  <header class="avatar">
+    <h2>Dashboard</h2>
+  </header>
+  <ul>
+    <li tabindex="0" class="icon-verify-customer"> <a class="nav-link" routerLink="/admin/verifyaccount"
+        routerLinkActive="active">Verify Account</a></li>
+    <li tabindex="1" class="icon-verify-image"> <a class="nav-link" routerLink="/admin/verifyimage" routerLinkActive="active">Verify
+        Image</a></li>
+    <li tabindex="2" class="icon-users"> <a class="nav-link" routerLink="/admin/currentartists" routerLinkActive="active">View
+        Current Artists</a></li>
+    <li tabindex="3" class="icon-addcategory"> <a class="nav-link" routerLink="/admin/addcategory" routerLinkActive="active">Add
+        New Category</a></li>
+    <li tabindex="4" class="icon-addsubcategory"> <a class="nav-link" routerLink="/admin/addsubcategory"
+        routerLinkActive="active">Add New Subcategory</a></li>
+    <li tabindex="5" class=""> <a class="nav-link" routerLink="/admin/deliveredarts" routerLinkActive="active">View
+        Delivered arts</a></li>
+    <li tabindex="6" class=""> <a class="nav-link" routerLink="/admin/notdeliveredarts" routerLinkActive="active">View
+        Not Delivered Arts</a></li>
+  </ul>
+</nav>
