--- a/src/app/customized-art/customized-art.component.css
+++ b/src/app/customized-art/customized-art.component.css
@@ -1,25 +1,28 @@
 .wizard {
     margin: 20px auto;
+   
     background: #fff;
 }
 
     .wizard .nav-tabs {
         position: relative;
         margin: 40px auto;
+        
         margin-bottom: 0;
         border-bottom-color: #e0e0e0;
     }
 
     .wizard > div.wizard-inner {
         position: relative;
+        margin-left:20%;
     }
 
 .connecting-line {
     height: 2px;
     background: #e0e0e0;
     position: absolute;
-    width: 80%;
-    margin-left:10%;
+    width: 50%;
+    margin-left:15%;
     left: 0;
     right: 0;
     top: 50%;
@@ -158,7 +161,7 @@ span.round-tab:hover {
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
-  background: #f2f2f2;
+  background: #d4d4d4;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
@@ -169,7 +172,7 @@ span.round-tab:hover {
 .form select {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #f2f2f2;
+    background: #d4d4d4;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
