changes bla bla bla

--- a/src/app/admin/not-delivered-arts/not-delivered-arts.component.html
+++ b/src/app/admin/not-delivered-arts/not-delivered-arts.component.html
@@ -1,24 +1,29 @@
 <div class="container helper">
-  <div class="row" *ngIf="undeliveredArts && undeliveredArts.length > 0; else nopendingart">
-    <div class="card card--big" *ngFor="let undeliveredArt of undeliveredArts">
-      <img class="card__image" [src]="undeliveredArt.Image" alt="custom_art_image">
-
-      <h2 class="card__title">Framing: {{ undeliveredArt.Framing }}</h2>
-      <p class="card__text">Preferred Artist: {{ undeliveredArt.artist.fullName }}</p>
-      <p class="card__text">Description: {{ undeliveredArt.description }}</p>
-      <p class="card__text">Delivered: No</p>
-      
-
-      <div class="card__action-bar">
-        <button (click)="setArtId(undeliveredArt.id); open(content);" style="cursor: pointer" class="card__button"><Strong
-            style="color:#d91e18">Change Status</Strong></button>
-            <button (click)="setArtId(undeliveredArt.id); open(delete);" style="cursor: pointer" class="card__button"><Strong
-              style="color:#d91e18">Delete</Strong></button>
+    <div class="row" *ngIf="undeliveredArts && undeliveredArts.length > 0; else nopendingart">
+      <div class="card card--big" *ngFor="let undeliveredArt of undeliveredArts">
+        <img class="card__image" [src]="undeliveredArt.Image" alt="custom_art_image">
+  
+                <h2 class="card__title">Framing: {{ undeliveredArt.Framing }}</h2>
+            
+            <p class="card__text">
+              
+              <a>Preferred Artist: {{ undeliveredArt.artist.fullName }}</a><br>
+              <a>Description: {{ undeliveredArt.description }}</a><br>
+              <a>Delivered: No</a><br>
+            </p>
+        
+  <br>
+        <div class="card__action-bar">
+          <button (click)="setArtId(undeliveredArt.id); open(content);" style="cursor: pointer" class="card__button"><Strong
+              style="color:#d91e18">Change Status</Strong></button>
+              <button (click)="setArtId(undeliveredArt.id); open(delete);" style="cursor: pointer" class="card__button"><Strong
+                style="color:#d91e18">Delete</Strong></button>
+        </div>
       </div>
     </div>
+  
   </div>
-
-</div>
+  
 
 
 <ng-template #nopendingart>
