--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -14,9 +14,9 @@
         New Category</a></li>
     <li tabindex="4" class="icon-addsubcategory"> <a class="nav-link" routerLink="/admin/addsubcategory"
         routerLinkActive="active">Add New Subcategory</a></li>
-    <li tabindex="5" class=""> <a class="nav-link" routerLink="/admin/deliveredarts" routerLinkActive="active">View
+    <li tabindex="5" class="icon-verifiedartist"> <a class="nav-link" routerLink="/admin/deliveredarts" routerLinkActive="active">View
         Delivered arts</a></li>
-    <li tabindex="6" class=""> <a class="nav-link" routerLink="/admin/notdeliveredarts" routerLinkActive="active">View
+    <li tabindex="6" class="icon-notverifiedartist"> <a class="nav-link" routerLink="/admin/notdeliveredarts" routerLinkActive="active">View
         Not Delivered Arts</a></li>
   </ul>
 </nav>
