changes in cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -66,9 +66,9 @@
                         </tbody>
     
                     </table>
-                    <a href="demo.html" class="pull-left"><strong>Keep Shopping</strong></a>
+                    <a class="pull-left"><strong>Keep Shopping</strong></a>
                     <div class="pull-right">
-                        <a href="payment-form.html"><button name="button" class="button">Proceed For Payment</button></a>
+                        <a (click)= "checkout()"><button name="button" class="button">Proceed For Payment</button></a>
                     </div>
                 </div>
                               
