--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -44,7 +44,7 @@
                         <div class="description">
                             <hr>
                                        Genre : {{productDetails.subCategory.subCategory}}<br>
-                                        Artist  : <a href="shankar.html" style="color:blue">{{productDetails.user.fullName}}</a><br>
+                                        Artist  : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue">{{productDetails.user.fullName}}</a><br>
                                         Size: 17.5" x 13.5" Inch<br>
                                         Signed : Yes<br>
                                         Orientation : {{productDetails.Orientation}}<br>
