quantity added to cart

--- a/src/app/product-upload/product-upload.component.html
+++ b/src/app/product-upload/product-upload.component.html
@@ -13,7 +13,7 @@
              </div>
              <div class="form-group">
                  <label for="builOn"class=" form-control-label">Build On:</label>
-                <input type="date" name="buildOn" class="form-control" value="" formControlName="buildOn" >
+                <input type="text" name="buildOn" class="form-control" value="" formControlName="buildOn" >
              </div>
              <div class="form-group">
                  <label for="price"class=" form-control-label"></label>
