--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -5,25 +5,15 @@
     <p> Check out to get<br> the prodcut at your doorstep </p>
   </div>
                  
- <div id="modal-3" class="modal" data-modal-effect="slide-top">
-  <div class="modal-content">
-    <h2 class="fs-title">User Information</h2>
-    <h3 class="fs-subtitle">Known our user is crucial</h3>
-    <p>Art is all about knowning who loves them and who make them.Having your information will help us to reach for arts feedback and suggestion and as well as helps us in faster and reliable shipping at your door.</p>
-    <input type="button" name="next" class="next action-button modal-close" value="Got it!">
-  </div>
- </div>
 </div>
-
-<div class="tabs" style="margin-left:30%">
+<div class="tabs" style="margin-left:30%" [formGroup] = "PaymentForm">
   <input type="radio" name="tabs" id="tabone" checked="checked">
   <label for="tabone">User Information</label>
   <div class="tab">
        
     <div class="form">
-      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
      <div class="form-group">
-      <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">
+      <label for="existingUser">
         Existing User?
       </label>
       <button type="submit" name="button">Click Here</button>
@@ -32,58 +22,57 @@
 
     <p>-------------------------------------OR--------------------------------------------</p>
         <div class="form-group">
-          <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983"> Full Name:
-            <input type="text" name="fullName" class="form-control" value="" formControlName="fullName" placeholder="Full Name:">
+          <label for="address_line_1"> Address Line 1:
+            <input type="text" name="address_line_1" class="form-control" value="" formControlName="address_line_1" placeholder="Address Line 1">
           </label>
         </div>
        
   
         <div class="form-group"> 
-          <label for="email-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">Email:
-            <input type="email" name="email" value="" class="form-control" formControlName="email" placeholder="Email">
+          <label for="address_line_2">Address Line 2:
+            <input type="text" name="address_line_2" value="" class="form-control" formControlName="address_line_2" placeholder="Address Line 2">
           </label>
         </div>
         
-    <div class="form-group">
-          <label for="edit-submitted-constituent-base-total-constituents total_number_of_constituents_in_your_database-99a6d115-5e68-4355-a7d0-529207feb0b3_6344" style="height: 90px">Phone Number:
-            <input type="number" name="phoneNumber" value="" class="form-control" formControlName="Phone" placeholder="Phone Number" style="height: auto">
-          </label>
-        </div>
     
     <div class="form-group">
-          <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">Country:
-            <input type="text" name="Country" class="form-control" value="" formControlName="Country" placeholder="Country">
+          <label for="country">Country:
+            <input type="text" name="Country" class="form-control" value="" formControlName="country" placeholder="Country">
           </label>
         </div>
+
+    <div class="form-group">
+          <label for="city">City:
+            <input type="text" name="city" class="form-control" value="" formControlName="city" placeholder="City">
+          </label>
+     </div>
     
     <div class="form-group">
-          <label for="email-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">Street Address:
-            <input type="text" name="streetaddress" class="form-control" value="" formControlName="streetaddress" placeholder="Street Address">
+          <label for="altAddress">Alternative Address:
+            <input type="text" name="alt_address" class="form-control" value="" formControlName="alt_address" placeholder="Alternative Address">
           </label>
-        </div>
+    </div>
   
   <div class="form-group">
-          <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">State/ Provience:
-            <input type="text" name="state" class="form-control" value="" formControlName="state" placeholder="State / Zone *">
+          <label for="state">State/ Provience:
+            <input type="text" name="state" class="form-control" value="" formControlName="province" placeholder="State / Zone *">
           </label>
         </div>
-    
-     <div class="form-group">
-          <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">Shipping Address:
-            <input type="text" name="Shipping Address" class="form-control" value="" formControlName="Shipping Address" placeholder="Shipping Address">
-          </label>
-        </div>
-       
-     
 
-        
+        <div class="form-group">
+            <label for="city">Postal Code:
+              <input type="text" name="postal_code" class="form-control" value="" formControlName="postal_code" placeholder="Postal Code">
+            </label>
+       </div>
 
-        
-  
+
+        <div class="form-group">
+            <label for="phoneNumber" style="height: 90px">Phone Number:
+              <input type="number" name="phoneNumber" value="" class="form-control" formControlName="alt_phone" placeholder="Phone Number" style="height: auto">
+            </label>
+          </div>
        
-        <button type="submit" name="button">Next</button>
-        
-      </form>
+    <button type="submit" name="button">Next</button>
   
     </div>
    </div>
@@ -91,22 +80,106 @@
   <input type="radio" name="tabs" id="tabtwo">
   <label for="tabtwo">Billing Methods</label>
   <div class="tab">
-      <div class="form">
-    <p>
-      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.
-    </p>
-    <p>
-      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
-    </p></div> </div>
-  
+    <div class="form">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><input type="radio" name="choice">
+                 Cash on Delivery
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="panel-body">
+                
+                Simply,Pay with cash upon delivery.
+              </div>
+            </div>
+          </div>
+    <button  name="previous" value="Previous" >Previous</button>
+    <button name="next"  value="Next" >Next</button>
+  </div>
+</div>
   <input type="radio" name="tabs" id="tabthree">
   <label for="tabthree">Billing recheck</label>
+  
   <div class="tab">
-      <div class="form">
-    <p>
-      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin.
-    </p>
+    <div class="form">
+
+        <div class="banner">Billing<strong> Review</strong></div>
+           
+        <!-- </section> -->
+            <div class="row" style="margin:0%"  *ngIf="products.length > 0"> 
+                 <div class="row">
+                     <h3>  {{products.length}} items in your cart</h3>
+                 </div>
+                    <div class="table-responsive">
+        
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Arts </th>
+                                    <th scope="col">Product</th>
+                                    <th scope="col">Available</th>
+                                    <th scope="col" style="width:10%"></th>
+                                    <th scope="col" class="text-right">Price</th>
+                                   
+                                </tr>
+                            </thead>
+                            <tbody >
+                                  <tr *ngFor="let prod of products">
+                                    <td><img src="{{prod.image}}" style="width: 25%"> </td>
+                                    <td>{{prod.Name}}</td>
+                                    
+                                    <td> {{prod.availability}}</td>
+                                    <td></td>
+                                    <!-- <td><input class="form-control" type="text" value="1" ></td> -->
+                                    <td class="text-right">{{prod.price}}</td>
+                                    <td class="text-right"><button id = "{{prod.id}}" class="btn btn-sm btn-danger"   (click)= "removeFromCart($event)">
+                                        <i  id = "{{prod.id}}" class="fa fa-trash"></i> 
+                                    </button> </td>
+                                </tr>
+                              
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td> 
+                                    <td>Sub-Total</td>
+                                    <td class="text-right">Rs.{{subTotal}}</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>Shipping</td>
+                                    <td class="text-right">Rs.{{shipping}}</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td><strong>Total</strong></td>
+                                    <td class="text-right"><strong>Rs.{{subTotal + shipping}}</strong></td>
+                                </tr>
+                                
+                            </tbody>
+        
+                        </table>
+                    
+                    </div>
+                                  
     
-  </div>
+    
+    
+    </div>
+    <br>
+    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "!products.length > 0">Place Order</button>
+    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "products.length > 0">Return</button>
+    
+    </div>
+   
   </div>
 </div>
