delivery post completed

--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -121,7 +121,7 @@
                                     <th scope="col">Arts </th>
                                     <th scope="col">Product</th>
                                     <th scope="col">Available</th>
-                                    <th scope="col" style="width:10%"></th>
+                                    <th scope="col" style="width:10%">Quantity</th>
                                     <th scope="col" class="text-right">Price</th>
                                    
                                 </tr>
@@ -132,9 +132,9 @@
                                     <td>{{prod.Name}}</td>
                                     
                                     <td> {{prod.availability}}</td>
-                                    <td></td>
+                                    <td><input id = "{{prod.id}}" type = "number" min = "1" [value] = "prod.quantity" (input) = "quantityChange($event)"></td>
                                     <!-- <td><input class="form-control" type="text" value="1" ></td> -->
-                                    <td class="text-right">{{prod.price}}</td>
+                                    <td class="text-right">{{prod.price * prod.quantity}}</td>
                                     <td class="text-right"><button id = "{{prod.id}}" class="btn btn-sm btn-danger"   (click)= "removeFromCart($event)">
                                         <i  id = "{{prod.id}}" class="fa fa-trash"></i> 
                                     </button> </td>
