--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<ng-http-loader  [backgroundColor]="'#ff0000'"
+[spinner]="spinkit.skWave"
+[debounceDelay]="100"
+[minDuration]="300"
+[extraDuration]="300"></ng-http-loader>
+
