--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -72,7 +72,7 @@
             </label>
           </div>
        
-    <button type="submit" name="button">Next</button>
+    <button class = "next" type="submit" name="button">Next</button>
   
     </div>
    </div>
@@ -96,8 +96,8 @@
               </div>
             </div>
           </div>
-    <button  name="previous" value="Previous" >Previous</button>
-    <button name="next"  value="Next" >Next</button>
+    <button  class="previous" value="Previous" >Previous</button>
+    <button class = "next" type="submit" name="button">Next</button>
   </div>
 </div>
   <input type="radio" name="tabs" id="tabthree">
@@ -176,6 +176,7 @@
     
     </div>
     <br>
+    <button  class="previous" value="Previous" >Previous</button>
     <button type="submit" (click)="onSubmit()" name="button" [hidden] = "!products.length > 0">Place Order</button>
     <button type="submit" (click)="onSubmit()" name="button" [hidden] = "products.length > 0">Return</button>
     
