--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,36 +40,49 @@
         </li>
 
       </ul>
-      <ul class="navbar-nav " style="float:right">
+      <div class="Dropdown" style="float:right">
+  <div class="Dropdown-profile">
+    <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/33381/profile/profile-80.jpg?1" class="Photo" />
+    <span class="Name">Michael Lee</span>
+    <span class="MenuIcon">
+      <span class="MenuIcon-line"></span>
+      <span class="MenuIcon-line"></span>
+      <span class="MenuIcon-line"></span>
+    </span>
+  </div>
+  <nav class="Dropdown-nav">
+    <ul class="Dropdown-menu">
         <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowProfile() | async" routerLink="/profile-page"><span class=""></span><strong>Profile</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowUploadProduct() | async" routerLink="/upload-product"><strong>Upload
-              Product</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowLogin() | async" routerLink="/login"><span class="fa fa-sign-in"></span>
-            <strong>Login</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowSignup() | async" routerLink="/signup"><strong>Sign Up</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowWishlist() | async" routerLink="/wishlist"><strong>Wishlist</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowCart() | async" routerLink="/cart"><span class="fa fa-cart-plus"></span><strong>Cart</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowDashboard() | async" routerLink="admin"><strong>Dashboard</strong></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowLogout() | async" routerLink="/home" (click)="logoutEvent()"><span
-              class="fa fa-sign-out"></span><strong>Logout</strong></a>
-        </li>
-
-      </ul>
+            <a class=" NavLink" *ngIf="navbarService.getShowProfile() | async" routerLink="/profile-page" ><span class=""></span><strong>Profile</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowUploadProduct() | async" routerLink="/upload-product"><strong>Upload
+                Product</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowLogin() | async" routerLink="/login"><span class="fa fa-sign-in"></span>
+              <strong>Login</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowSignup() | async" routerLink="/signup"><strong>Sign Up</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowWishlist() | async" routerLink="/wishlist"><strong>Wishlist</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowCart() | async" routerLink="/cart"><span class="fa fa-cart-plus"></span><strong>Cart</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowDashboard() | async" routerLink="admin"><strong>Dashboard</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class=" NavLink" *ngIf="navbarService.getShowLogout() | async" routerLink="/home" (click)="logoutEvent()"><span
+                class="fa fa-sign-out"></span><strong>Logout</strong></a>
+          </li>
+</ul>
+  </nav>
+</div>
+ 
     </div>
 
   </div>
