--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -6,7 +6,7 @@
   </div>
                  
 </div>
-<div class="tabs" style="margin-left:30%" [formGroup] = "PaymentForm">
+<div class="tabs"  [formGroup] = "PaymentForm">
   <input type="radio" name="tabs" id="tabone" checked="checked">
   <label for="tabone">User Information</label>
   <div class="tab">
@@ -83,9 +83,9 @@
     <div class="form">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
-              <h4 class="panel-title">
+              <h4 class="banner">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><input type="radio" name="choice">
-                 Cash on Delivery
+                 Cash on <Strong>Delivery</Strong>
                 </a>
               </h4>
             </div>
@@ -96,8 +96,8 @@
               </div>
             </div>
           </div>
-    <button  class="previous" value="Previous" >Previous</button>
-    <button class = "next" type="submit" name="button">Next</button>
+    <button  class="previous" value="Previous" style="margin:2%; width:37%;">Previous</button>
+    <button class = "next" type="submit" name="button"  style="margin:2%; width:37%">Next</button>
   </div>
 </div>
   <input type="radio" name="tabs" id="tabthree">
@@ -176,9 +176,9 @@
     
     </div>
     <br>
-    <button  class="previous" value="Previous" >Previous</button>
-    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "!products.length > 0">Place Order</button>
-    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "products.length > 0">Return</button>
+    <button  class="previous" value="Previous"  style="margin:2%; width:37%;">Previous</button>
+    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "!products.length > 0" style="margin:2%; width:37%;">Place Order</button>
+    <button type="submit" (click)="onSubmit()" name="button" [hidden] = "products.length > 0" style="margin:2%; width:37%;">Return</button>
     
     </div>
    
