image loader for error or delay

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
   <div class="container">
     <a class="navbar-brand" href="#"><img src="./assets/images/brand/opus.jpg" style="width:auto; height:59px; overflow: hidden !important;"
-        class="logo" alt="Opus "></a>
+        class="logo" alt="Opus " onerror="this.onerror=null;this.src='http://thinkfuture.com/wp-content/uploads/2013/10/loading_spinner.gif';"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
       </ul>
       <div class="Dropdown" style="float:right">
   <div class="Dropdown-profile">
-    <img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/33381/profile/profile-80.jpg?1" class="Photo" />
+    <img src="//s3-us-west-2.amazonawsa.com/s.cdpn.io/33381/profile/profile-80.jpg?1" class="Photo"  />
     <span class="Name">Michael Lee</span>
     <span class="MenuIcon">
       <span class="MenuIcon-line"></span>
